[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MLR_ArjunS07_pip"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]